--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -16,7 +16,7 @@
               <button type="button" class="btn btn-danger" (click)="goBack()">Quay lại</button>
           </div>
           <div class="form-group">
-            <button class="btn-social-facebook"></button>
+            <button class="btn-social-facebook" (click)="signIn('facebook')"></button>
           </div>
           <!-- <div class="form-group">
             <button class="btn-social-google"></button>
